--- a/src/templates/_activeuser.html
+++ b/src/templates/_activeuser.html
@@ -12,11 +12,7 @@
 			<code class="pull-right">{{ account.Name }}</code>
 			<strong>Username:</strong>
 		</div>
-		<div class="list-group-item" ng-show="{{ user.Scope=='admin' }}">
-			<code class="pull-right">{{ account.NotificationEmail }}</code>
-			<strong>Notification Email:</strong>
-		</div>
-		<div class="list-group-item form-inline" ng-show="{{ user.Scope=='admin' || user.Scope=='admin super' }}">
+		<div class="list-group-item form-inline">
 			<strong>Notification Email:</strong>
 			<form method="POST" class="input-group pull-right" ng-submit="changeNotificationEmail()">
 				<input class="form-control" ng-init="accountNotfEmail =  account.NotificationEmail"  ng-model="accountNotfEmail">
